add_library(P2PSocket
                event/Event.cpp
                event/Eventregister.cpp
                Events.cpp
                P2PSocket.cpp
                exceptions/P2PSocketException.hpp
                exceptions/peerexception.h
                Peer.cpp
                Peers.cpp
                peersmessages.cpp
                SocketResource.cpp)


